--- a/src/Weather.css
+++ b/src/Weather.css
@@ -31,7 +31,7 @@ color: rgb(135, 135, 135);
   
 }
 
-.Weather img {
+.Weather .img {
     height: 64px;
     width: 64px;
     margin-right: 10px;
@@ -45,11 +45,10 @@ color: rgb(35, 35, 35);
 font-size: 64px;
 font-weight: 400;
 line-height:64px;
-margin-left: 5px;
-
+margin-left: 10px;
 }
 
-.Weather unit {
+.Weather .unit {
     color: rgb(33, 33, 33);
     font-size: 16px;
     font-weight: 400;
